--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
 }
+
 html,
 body {
   max-width: 100%;
   overflow-x: hidden;
 }
+
 body {
   background-image: url(../img/pexels-stephen-audu-6693703.jpg);
   background-size: cover;
@@ -20,24 +22,40 @@ body {
   display: flex;
   flex-direction: column;
 }
-a {
-  text-decoration: none;
-}
-a:hover {
-  color: gray;
-}
+
 .container {
   width: 100%;
   margin: 0 auto;
   max-width: 1320px;
 }
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: gray;
+}
+
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .col {
   width: 100%;
+}
+
+@keyframes from-rigth {
+  0% {
+    opacity: 0;
+    transform: translateX(80px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
 p {
   text-align: center;
@@ -45,6 +63,7 @@ p {
   cursor: default;
   text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
 }
+
 .titulos {
   text-align: center;
   cursor: default;
@@ -53,6 +72,7 @@ p {
   text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
   animation: animate__flipInX 1.5s ease;
 }
+
 .titulos__2 {
   text-align: center;
   color: white;
@@ -60,55 +80,7 @@ p {
   cursor: default;
   text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
 }
-.ubicacion {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-input {
-  width: 98%;
-  padding: 6px;
-  margin: 10px 0;
-  border: 2px solid #ccc;
-  border-radius: 7px;
-}
-textarea {
-  resize: none;
-  width: 97%;
-  height: 200px;
-  padding: 10px 10px;
-  border: 2px solid #ccc;
-  border-radius: 10px;
-}
-label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-.nav__list {
-  list-style: none;
-  display: flex;
-}
-.nav__item {
-  margin: 0 0 0 1.5rem;
-}
-.nav__link {
-  color: white;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-.nav__link:hover,
-.nav__link:focus {
-  opacity: 0.65;
-}
-.texto__inicio {
-  color: white;
-  border: solid 2px black;
-  border-radius: 20px;
-  padding: 20px;
-}
+
 footer {
   padding: 0rem 0;
   text-align: center;
@@ -117,39 +89,89 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
 .footer-sm {
   background-color: #212121;
   color: white;
   cursor: default;
 }
+
 .footer-sm a {
   color: white;
 }
+
 .footer-sm a i {
   font-size: 1rem;
   margin-left: 1rem;
 }
+
 .footer-sm__redes {
   text-align: center;
   padding: 0.5rem 0;
 }
+
 .footer-bottom {
   padding: 1.5rem 0;
 }
+
 .footer-bottom__contacto {
   text-align: center;
   color: gray;
   font-weight: 400;
   cursor: default;
 }
+
 .footer-bottom__contacto a {
   color: gray;
   text-decoration: none;
 }
+
 .footer-bottom__contacto a:hover {
   color: white;
   text-decoration: underline;
 }
+
+.tw:hover {
+  color: #55acee;
+}
+
+.ig:hover {
+  color: #e1306c;
+}
+
+.wp:hover {
+  color: #25d366;
+}
+
+.info {
+  color: #ffffff;
+  text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+input {
+  width: 98%;
+  padding: 6px;
+  margin: 10px 0;
+  border: 2px solid #ccc;
+  border-radius: 7px;
+}
+
+textarea {
+  resize: none;
+  width: 97%;
+  height: 200px;
+  padding: 10px 10px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+}
+
+label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
 .card {
   border-radius: 6px;
   background: #fff;
@@ -163,28 +185,34 @@ footer {
   flex-direction: column;
   animation: from-rigth 1.5s ease;
 }
+
 .card:hover {
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   transform: translateY(-3%);
 }
+
 .card img {
   order: -1;
   width: 100%;
   height: 210px;
   align-self: center;
 }
+
 .card .contenido {
   padding: 15px;
   text-align: center;
 }
+
 .card .contenido p {
   line-height: 1.5;
   color: #6a6a6a;
 }
+
 .card .contenido h2 {
   font-weight: 400;
   margin-bottom: 15px;
 }
+
 .card .contenido a {
   text-decoration: none;
   display: inline-block;
@@ -195,10 +223,12 @@ footer {
   border-radius: 4px;
   transition: all 400ms ease;
 }
+
 .card .contenido a:hover {
   background: green;
   color: white;
 }
+
 .productos {
   display: flex;
   flex-wrap: wrap;
@@ -206,43 +236,36 @@ footer {
   justify-content: space-evenly;
   gap: 70px;
 }
+
 .drops__container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
+
 .boton {
   margin-bottom: 10px;
 }
-.tw:hover {
-  color: #55acee;
+
+.texto__inicio {
+  color: white;
+  border: solid 2px black;
+  border-radius: 20px;
+  padding: 20px;
 }
-.ig:hover {
-  color: #e1306c;
+
+.ubicacion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
-.wp:hover {
-  color: #25d366;
-}
-nav {
-  margin-bottom: 30px;
-}
-.info {
-  color: #ffffff;
-  text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
-}
-@keyframes from-rigth {
-  0% {
-    opacity: 0;
-    transform: translateX(80px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
+
 .video__publicacion {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+/*# sourceMappingURL=style.css.map */
