sass 2 (mixins and varials)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "base/reset";
 @import "components/titles";
 @import "layout/footer";
+@import "utils/mixins";
+@import "utils/variables";
 @import "pages/accesorios";
 @import "pages/buzos";
 @import "pages/comocomprar";
