--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,10 @@ footer {
 .info {
   color: #ffffff;
   text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 input {
